# ECEObjectDetection

./: README.md  package.xml  setup.cfg  setup.py
ECEObjectDetection/: ECEObjectDetection.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ECEObjectDetection/share/ECEObjectDetection/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
launch/: object_detection_full.launch.xml
log/: latest_build
object_detection/: object_detection.py
object_detection/launch/: static_tf.launch.xml
