<?xml version="1.0"?>
<package format="3">
<name>object_detection</name>
<version>0.1.0</version>
<description>Two-camera fused centroid detector with plane projection and true 3D triangulation.</description>


<maintainer email="andrewhellman@missouri.edu">Andrew Hellman</maintainer>
<license>Apache 2.0</license>


<!-- Build system for pure-Python packages -->
<buildtool_depend>ament_python</buildtool_depend>


<!-- Runtime dependencies (executed by the node) -->
<exec_depend>rclpy</exec_depend>
<exec_depend>sensor_msgs</exec_depend>
<exec_depend>geometry_msgs</exec_depend>
<exec_depend>std_msgs</exec_depend>
<exec_depend>tf2_ros</exec_depend>
<exec_depend>visualization_msgs</exec_depend>
<exec_depend>cv_bridge</exec_depend>


<!-- Optional: if you distribute launch files -->
<exec_depend>ros2launch</exec_depend>


<!-- Optional: tests -->
<test_depend>ament_copyright</test_depend>
<test_depend>ament_flake8</test_depend>
<test_depend>ament_pep257</test_depend>
<test_depend>python3-pytest</test_depend>


<export>
<build_type>ament_python</build_type>
</export>
</package>